<resources>
    <string name="app_name">JD3TV</string>
    <string name="welcome_to">Welcome to</string>
    <string name="choose_price_plan">CHOOSE YOUR PRICING PLAN</string>
    <string name="flexible_pricing">flexible pricing plans to suit your lifestyle</string>
    <string name="get_started">Get Started</string>
    <string name="login_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forgot the password?</string>
    <string name="continue_with">or continue with</string>
    <string name="do_not_have_account">Don’t Have an Account?</string>

    <!-- top bar-->
    <string name="shows">Shows</string>
    <string name="movies">Movies</string>
    <!--drawer data -->
    <string name="library">Library</string>
    <string name="orders">Orders</string>
    <string name="transaction">Transactions</string>
    <string name="membership">Membership</string>
    <string name="account_info">Account info</string>
    <string name="payment_method">Payment methods</string>
    <string name="sign_out">Sign out</string>

    <!-- event screen-->
    <string name="event">Event</string>
    <string name="event_calender">Events Calendar</string>
    <string name="previous_calender">previous Events</string>

    <string name="shop">Shop</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <!-- specials screen-->
    <string name="special">Specials</string>
    <string name="day">Day</string>
    <string name="hour">Hrs</string>
    <string name="min">Min</string>
</resources>