<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="21dp"
            android:layout_height="16dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="" />

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:src="@drawable/jd3tv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backImg"
            android:contentDescription="" />

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_your_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImg" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="62dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTxt"
            app:layout_constraintWidth_percent="0.7" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintWidth_percent="0.7" />

        <CheckBox
            android:id="@+id/rememberMeCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBtn"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/blue_violet"
            android:fontFamily="@font/poppins_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:cornerRadius="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rememberMeCB"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/forgetPassTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forget_password"
            android:textColor="@color/medium_purple"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInBtn" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/davyGray"
            app:layout_constraintBottom_toBottomOf="@+id/continueTV"
            app:layout_constraintEnd_toEndOf="@+id/signInBtn"
            app:layout_constraintStart_toStartOf="@+id/signInBtn"
            app:layout_constraintTop_toTopOf="@+id/continueTV" />

        <TextView
            android:id="@+id/continueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_semibold"
            android:padding="10dp"
            android:text="@string/continue_with"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassTV" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/socialCL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/continueTV">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/faceBookBtn"
            android:layout_width="58dp"
            android:layout_height="58dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/social_bg"
            android:src="@drawable/facebook_icon"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/googleBtn"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/google_icon"
                android:background="@drawable/social_bg"
                app:layout_constraintStart_toEndOf="@+id/faceBookBtn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="95dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/socialCL"
            >
            <TextView
                android:id="@+id/dontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/do_not_have_account"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"/>
            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@+id/dontHaveAccount"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/sign_in"
                android:textSize="15sp"
                android:textColor="@color/heliotrope"
                android:fontFamily="@font/poppins_medium"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>